<menu xmlns:android="http://schemas.android.com/apk/res/android" >

	<item
		android:id="@+id/menu_sousa"
		android:title="@string/menu_item_sousa">
		<menu>
			<item android:id="@+id/kujiSyuruiTitol" android:title="@string/kujiSyuruiTitol"/>
			<item android:id="@+id/kurikaesi_val_titol" android:title="@string/kurikaesi_val_titol" />
			<item android:id="@+id/main_tf_hyoujisuu" android:title="@string/main_tf_hyoujisuu" />
			<item
				android:id="@+id/menu_sousa_webrecord"
				android:title="@string/menu_item_sousa_webrecord"/>
		    <item
				android:id="@+id/menu_sousa_kekkaCheck"
				android:title="@string/menu_item_sousa_kekkaCheck"/>
			
			
		</menu>
	</item>
	<item
		android:id="@+id/menu_sonota"
		android:title="@string/menu_item_sonota">
		<menu>
			<item
				android:id="@+id/menu_sonota_settei"
				android:title="@string/menu_item_sonota_settei"/>
			<item
				android:id="@+id/menu_sonota_settei_syoukyo"
				android:title="@string/menu_item_sonota_settei_syoukyo"/>
			<item
				android:id="@+id/menu_sonota_help"
				android:title="@string/menu_item_sonota_help"/>
			<item
				android:id="@+id/menu_sonota_syuuryou"
				android:title="@string/menu_item_sonota_end"/>
		</menu>
	</item>

</menu>