<!-- <?xml version="1.0" encoding="utf-8"?> -->
<LinearLayout xmlns:tools="http://schemas.android.com/tools"
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:ads="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:columnCount="1"
	android:orientation="vertical"
	android:padding="0dp"
	android:paddingBottom="0dp"
	android:paddingTop="0dp">

	<WebView
		android:id="@+id/webview"
		android:layout_width="fill_parent"
		android:layout_height="0dp"
		android:layout_weight="0.98" />

	<LinearLayout
		android:id="@+id/wk_koukoku_ll"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_gravity="center_vertical"
		android:gravity="left"
		android:orientation="horizontal" >

		<com.google.android.gms.ads.AdView
			android:id="@+id/wk_adView"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignParentLeft="true"
			android:layout_gravity="bottom|left"
			ads:adSize="BANNER"
			ads:adUnitId="@string/banner_ad_unit_id"
			 >
		</com.google.android.gms.ads.AdView>
		<!--ads:adSize="BANNER"-->
		<!--ads:adUnitId="@string/banner_ad_unit_id"-->
		<!--ads:loadAdOnCreate="true"-->
		<!--         <LinearLayout -->
		<!--             android:id="@+id/nend_aria" -->
		<!--             android:layout_width="wrap_content" -->
		<!--             android:layout_height="wrap_content" -->
		<!--             android:layout_margin="1dp" -->
		<!--             android:clickable="true" -->
		<!--             android:gravity="center|bottom" > -->

		<net.nend.android.NendAdView
			android:id="@+id/wk_nend"
			android:layout_width="wrap_content"
			android:layout_height="match_parent"
			android:layout_gravity="bottom|right"
			android:layout_margin="0dp"
			NendApiKey="@string/nend_apiKey"
			NendSpotId="@string/nend_spotID" >

		</net.nend.android.NendAdView>
		<!--         </LinearLayout> -->
	</LinearLayout>
	<!--
            NendApiKey="@string/nend_apiKey"
            NendSpotId="@string/nend_spotID"
画面下部
            NendApiKey="3196d0666482065837fdca5b083c73c8a4b96c64"
            NendSpotId="468379"
Test
            NendApiKey="c5cb8bc474345961c6e7a9778c947957ed8e1e4f"
            NendSpotId="3174" /> -->

</LinearLayout>