<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

		<TableRow
		    android:id="@+id/kujime_Row"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_gravity="top" >

			<TextView
			    android:id="@+id/textView1"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_gravity="top|right"
			    android:text="@string/kujiset_namae" />

			<EditText
			    android:id="@+id/kujisyurui"
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
			    android:ems="10"
			    android:imeOptions="actionNext" >

			    <requestFocus />
			</EditText>

		</TableRow>

		<TableRow
		    android:id="@+id/honnsuuji_Row"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_gravity="top" >

			<TextView
			    android:id="@+id/textView20"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_gravity="top|right"
			    android:text="@string/kujiset_honnsuuji" />

			<LinearLayout
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content" >

			    <EditText
			        android:id="@+id/start_val"
			        android:layout_width="40dp"
			        android:layout_height="wrap_content"
			        android:ems="10"
			        android:inputType="number"
			        android:singleLine="true" />

			    <TextView
			        android:id="@+id/textView22"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:layout_gravity="top"
			        android:text=">>>" />

			    <EditText
			        android:id="@+id/end_val"
			        android:layout_width="50dp"
			        android:layout_height="wrap_content"
			        android:ems="10"
			        android:inputType="number"
			        android:singleLine="true" />

			    <TextView
			        android:id="@+id/textView23"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:layout_gravity="top"
			        android:text=" * " />

			    <EditText
			        android:id="@+id/val_val"
			        android:layout_width="40dp"
			        android:layout_height="wrap_content"
			        android:ems="10"
			        android:inputType="number"
			        android:singleLine="true" />

			    <CheckBox
			        android:id="@+id/honjyuuhuku"
			        android:layout_width="match_parent"
			        android:layout_height="wrap_content"
			        android:text="@string/kujiset_jyuuhuku"
			        android:textAppearance="?android:attr/textAppearanceSmall" />

			</LinearLayout>

		</TableRow>

		<TableRow
		    android:id="@+id/tokubann_Row"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_gravity="top" >

			<TextView
			    android:id="@+id/textView30"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_gravity="top|right"
			    android:text="@string/kujiset_tokubann" />

			<LinearLayout
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content" >

			    <EditText
			        android:id="@+id/spn_start"
			        android:layout_width="40dp"
			        android:layout_height="wrap_content"
			        android:ems="10"
			        android:inputType="number"
			        android:singleLine="true" />

			    <TextView
			        android:id="@+id/tv31"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:layout_gravity="top"
			        android:text=">>>" />

			    <EditText
			        android:id="@+id/spn_end"
			        android:layout_width="50dp"
			        android:layout_height="wrap_content"
			        android:ems="10"
			        android:inputType="number"
			        android:singleLine="true" />

			    <TextView
			        android:id="@+id/textView33"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:layout_gravity="top"
			        android:text=" * " />

			    <EditText
			        android:id="@+id/spn_val"
			        android:layout_width="40dp"
			        android:layout_height="wrap_content"
			        android:ems="10"
			        android:inputType="number"
			        android:singleLine="true" />

			    <CheckBox
			        android:id="@+id/toku_jyuuhuku"
			        android:layout_width="89dp"
			        android:layout_height="wrap_content"
			        android:text="@string/kujiset_jyuuhuku"
			        android:textAppearance="?android:attr/textAppearanceSmall" />

			</LinearLayout>

		</TableRow>

		<TableRow
		    android:id="@+id/web_Row"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_gravity="top" >

			<TextView
			    android:id="@+id/textView41"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_gravity="top|right"
			    android:text="@string/wrd_url" />

			<EditText
			    android:id="@+id/kujiurl"
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
			    android:ems="10"
			    android:imeOptions="actionNext"
			    android:inputType="textUri|textMultiLine" >

			    android:textAppearance="?android:attr/textAppearanceSmall"

			    <requestFocus />
			</EditText>

		</TableRow>


		</TableLayout>

</LinearLayout>